#add_executable(particle_test main.cu)
#add_executable(gpu_compress_decompress_test gpu_compress_decompress_test.cu)
#add_executable(cpu_compress_decompress_test cpu_compress_decompress_test.cpp)
#add_executable(cpu_compress_gpu_decompress_test
	#cpu_compress_gpu_decompress_test.cu)
#add_executable(gpu_compress_cpu_decompress_test
	 #gpu_compress_cpu_decompress_test.cu)
#add_executable(lz4_cpu_compression lz4_cpu_compression.cu)
#add_executable(lz4_cpu_decompression lz4_cpu_decompression.cu)
#add_executable(compress_decompress_test compress_decompress_test.cu)
#add_executable(just_test_copy_time just_test_copy_time.cu)
#add_executable(fft_test fft_test.cu)
#add_executable(cd_compact_test cd_compact_test.cu)
#add_executable(json_compress_test json_compress_test.cu)
add_executable(gpu_to_cpu gpu_to_cpu.cu)
add_executable(fft_with_diff_batch_size fft_with_diff_batch_size.cu)
#add_executable(zmq_test zmq_test.cpp)
#add_executable(server server.cu)
#add_executable(client client.cu)
#add_executable(batch_server batch_server.cu)
#add_executable(batch_client batch_client.cu)
#add_executable(batch_server_noc batch_server_noc.cu)
#add_executable(batch_client_noc batch_client_noc.cu)

#set_property(TARGET particle_test PROPERTY CUDA_SEPARABLE_COMPILATION ON)
#set_target_properties(particle_test  PROPERTIES POSITION_INDEPENDENT_CODE ON)
#
##set_property(TARGET particle_test PROPERTY CUDA_ARCHITECTURES 35 50 72)
#target_link_libraries(particle_test PRIVATE ${linklib})
#target_link_libraries(gpu_compress_decompress_test PRIVATE ${linklib})
#target_link_libraries(cpu_compress_decompress_test PRIVATE ${linklib})
#target_link_libraries(cpu_compress_gpu_decompress_test PRIVATE ${linklib})
#target_link_libraries(gpu_compress_cpu_decompress_test PRIVATE ${linklib})
#target_link_libraries(lz4_cpu_compression PRIVATE ${linklib})
#target_link_libraries(lz4_cpu_decompression PRIVATE ${linklib})
#target_link_libraries(compress_decompress_test PRIVATE ${linklib})
#target_link_libraries(just_test_copy_time PRIVATE ${linklib})
#target_link_libraries(fft_test PRIVATE ${linklib})
#target_link_libraries(cd_compact_test PRIVATE ${linklib})
#target_link_libraries(json_compress_test PRIVATE ${linklib})
target_link_libraries(gpu_to_cpu PRIVATE ${linklib})
target_link_libraries(fft_with_diff_batch_size PRIVATE ${linklib})
#target_link_libraries(zmq_test PRIVATE ${linklib})
#target_link_libraries(server PRIVATE ${linklib})
#target_link_libraries(client PRIVATE ${linklib})
#target_link_libraries(batch_server PRIVATE ${linklib})
#target_link_libraries(batch_client PRIVATE ${linklib})
#target_link_libraries(batch_server_noc PRIVATE ${linklib})
#target_link_libraries(batch_client_noc PRIVATE ${linklib})

#target_link_libraries(particle_test PRIVATE -lcublas -lcurand)

#target_link_libraries(particle_test PUBLIC ${CUBLAS_LIBRARIES})
